qt6/gen_qtextdocument.h

class QAbstractTextDocumentLayout;
class QAbstractUndoItem;
class QChar;
class QMetaObject;
class QObject;
class QTextCursor;
class QTextDocument;
typedef struct QAbstractTextDocumentLayout QAbstractTextDocumentLayout;
typedef struct QAbstractUndoItem QAbstractUndoItem;
typedef struct QChar QChar;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextObject QTextObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
void QTextDocument_cursorPositionChanged(QTextDocument* self, QTextCursor* cursor);
void QTextDocument_connect_cursorPositionChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_blockCountChanged(QTextDocument* self, int newBlockCount);
void QTextDocument_connect_blockCountChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_baseUrlChanged(QTextDocument* self, QUrl* url);
void QTextDocument_connect_baseUrlChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_documentLayoutChanged(QTextDocument* self);
void QTextDocument_connect_documentLayoutChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_undo2(QTextDocument* self);
void QTextDocument_redo2(QTextDocument* self);
void QTextDocument_appendUndoItem(QTextDocument* self, QAbstractUndoItem* param1);
void QTextDocument_setModified(QTextDocument* self);
struct miqt_string QTextDocument_tr2(const char* s, const char* c);
struct miqt_string QTextDocument_tr3(const char* s, const char* c, int n);
QTextDocument* QTextDocument_clone1(const QTextDocument* self, QObject* parent);
struct miqt_string QTextDocument_toMarkdown1(const QTextDocument* self, int features);
void QTextDocument_setMarkdown2(QTextDocument* self, struct miqt_string markdown, int features);
QTextCursor* QTextDocument_find22(const QTextDocument* self, struct miqt_string subString, int from);
QTextCursor* QTextDocument_find32(const QTextDocument* self, struct miqt_string subString, int from, int options);
QTextCursor* QTextDocument_find33(const QTextDocument* self, struct miqt_string subString, QTextCursor* cursor, int options);
QTextCursor* QTextDocument_find23(const QTextDocument* self, QRegularExpression* expr, int from);
QTextCursor* QTextDocument_find34(const QTextDocument* self, QRegularExpression* expr, int from, int options);
QTextCursor* QTextDocument_find35(const QTextDocument* self, QRegularExpression* expr, QTextCursor* cursor, int options);
void QTextDocument_drawContents2(QTextDocument* self, QPainter* painter, QRectF* rect);
void QTextDocument_clearUndoRedoStacks1(QTextDocument* self, int historyToClear);
void QTextDocument_setModified1(QTextDocument* self, bool m);
bool QTextDocument_override_virtual_metacall(void* self, intptr_t slot);
int QTextDocument_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTextDocument_override_virtual_clear(void* self, intptr_t slot);
void QTextDocument_virtualbase_clear(void* self);
bool QTextDocument_override_virtual_createObject(void* self, intptr_t slot);
QTextObject* QTextDocument_virtualbase_createObject(void* self, QTextFormat* f);
bool QTextDocument_override_virtual_loadResource(void* self, intptr_t slot);
QVariant* QTextDocument_virtualbase_loadResource(void* self, int type, QUrl* name);
bool QTextDocument_override_virtual_event(void* self, intptr_t slot);
bool QTextDocument_virtualbase_event(void* self, QEvent* event);
bool QTextDocument_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTextDocument_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTextDocument_override_virtual_timerEvent(void* self, intptr_t slot);
void QTextDocument_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTextDocument_override_virtual_childEvent(void* self, intptr_t slot);
void QTextDocument_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTextDocument_override_virtual_customEvent(void* self, intptr_t slot);
void QTextDocument_virtualbase_customEvent(void* self, QEvent* event);
bool QTextDocument_override_virtual_connectNotify(void* self, intptr_t slot);
void QTextDocument_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTextDocument_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTextDocument_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTextDocument_staticMetaObject();
void QTextDocument_delete(QTextDocument* self);