qt6/gen_qtextdocument.nim

proc fcQTextDocument_cursorPositionChanged(self: pointer, cursor: pointer): void {.importc: "QTextDocument_cursorPositionChanged".}
proc fQTextDocument_connect_cursorPositionChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_cursorPositionChanged".}
proc fcQTextDocument_blockCountChanged(self: pointer, newBlockCount: cint): void {.importc: "QTextDocument_blockCountChanged".}
proc fQTextDocument_connect_blockCountChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_blockCountChanged".}
proc fcQTextDocument_baseUrlChanged(self: pointer, url: pointer): void {.importc: "QTextDocument_baseUrlChanged".}
proc fQTextDocument_connect_baseUrlChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_baseUrlChanged".}
proc fcQTextDocument_documentLayoutChanged(self: pointer, ): void {.importc: "QTextDocument_documentLayoutChanged".}
proc fQTextDocument_connect_documentLayoutChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_documentLayoutChanged".}
proc fcQTextDocument_undo2(self: pointer, ): void {.importc: "QTextDocument_undo2".}
proc fcQTextDocument_redo2(self: pointer, ): void {.importc: "QTextDocument_redo2".}
proc fcQTextDocument_appendUndoItem(self: pointer, param1: pointer): void {.importc: "QTextDocument_appendUndoItem".}
proc fcQTextDocument_setModified(self: pointer, ): void {.importc: "QTextDocument_setModified".}
proc fcQTextDocument_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextDocument_tr2".}
proc fcQTextDocument_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextDocument_tr3".}
proc fcQTextDocument_clone1(self: pointer, parent: pointer): pointer {.importc: "QTextDocument_clone1".}
proc fcQTextDocument_toMarkdown1(self: pointer, features: cint): struct_miqt_string {.importc: "QTextDocument_toMarkdown1".}
proc fcQTextDocument_setMarkdown2(self: pointer, markdown: struct_miqt_string, features: cint): void {.importc: "QTextDocument_setMarkdown2".}
proc fcQTextDocument_find22(self: pointer, subString: struct_miqt_string, fromVal: cint): pointer {.importc: "QTextDocument_find22".}
proc fcQTextDocument_find32(self: pointer, subString: struct_miqt_string, fromVal: cint, options: cint): pointer {.importc: "QTextDocument_find32".}
proc fcQTextDocument_find33(self: pointer, subString: struct_miqt_string, cursor: pointer, options: cint): pointer {.importc: "QTextDocument_find33".}
proc fcQTextDocument_find23(self: pointer, expr: pointer, fromVal: cint): pointer {.importc: "QTextDocument_find23".}
proc fcQTextDocument_find34(self: pointer, expr: pointer, fromVal: cint, options: cint): pointer {.importc: "QTextDocument_find34".}
proc fcQTextDocument_find35(self: pointer, expr: pointer, cursor: pointer, options: cint): pointer {.importc: "QTextDocument_find35".}
proc fcQTextDocument_drawContents2(self: pointer, painter: pointer, rect: pointer): void {.importc: "QTextDocument_drawContents2".}
proc fcQTextDocument_clearUndoRedoStacks1(self: pointer, historyToClear: cint): void {.importc: "QTextDocument_clearUndoRedoStacks1".}
proc fcQTextDocument_setModified1(self: pointer, m: bool): void {.importc: "QTextDocument_setModified1".}
proc fQTextDocument_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTextDocument_virtualbase_metacall".}
proc fcQTextDocument_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_metacall".}
proc fQTextDocument_virtualbase_clear(self: pointer, ): void{.importc: "QTextDocument_virtualbase_clear".}
proc fcQTextDocument_override_virtual_clear(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_clear".}
proc fQTextDocument_virtualbase_createObject(self: pointer, f: pointer): pointer{.importc: "QTextDocument_virtualbase_createObject".}
proc fcQTextDocument_override_virtual_createObject(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_createObject".}
proc fQTextDocument_virtualbase_loadResource(self: pointer, typeVal: cint, name: pointer): pointer{.importc: "QTextDocument_virtualbase_loadResource".}
proc fcQTextDocument_override_virtual_loadResource(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_loadResource".}
proc fQTextDocument_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTextDocument_virtualbase_event".}
proc fcQTextDocument_override_virtual_event(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_event".}
proc fQTextDocument_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTextDocument_virtualbase_eventFilter".}
proc fcQTextDocument_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_eventFilter".}
proc fQTextDocument_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTextDocument_virtualbase_timerEvent".}
proc fcQTextDocument_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_timerEvent".}
proc fQTextDocument_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTextDocument_virtualbase_childEvent".}
proc fcQTextDocument_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_childEvent".}
proc fQTextDocument_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTextDocument_virtualbase_customEvent".}
proc fcQTextDocument_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_customEvent".}
proc fQTextDocument_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTextDocument_virtualbase_connectNotify".}
proc fcQTextDocument_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_connectNotify".}
proc fQTextDocument_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTextDocument_virtualbase_disconnectNotify".}
proc fcQTextDocument_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTextDocument_override_virtual_disconnectNotify".}
proc fcQTextDocument_staticMetaObject(): pointer {.importc: "QTextDocument_staticMetaObject".}
proc fcQTextDocument_delete(self: pointer) {.importc: "QTextDocument_delete".}


func init*(T: type QAbstractUndoItem, h: ptr cQAbstractUndoItem): QAbstractUndoItem =
  T(h: h)
proc undo*(self: QAbstractUndoItem, ): void =

  fcQAbstractUndoItem_undo(self.h)

proc redo*(self: QAbstractUndoItem, ): void =

  fcQAbstractUndoItem_redo(self.h)

proc operatorAssign*(self: QAbstractUndoItem, param1: QAbstractUndoItem): void =

  fcQAbstractUndoItem_operatorAssign(self.h, param1.h)

proc delete*(self: QAbstractUndoItem) =
  fcQAbstractUndoItem_delete(self.h)

func init*(T: type QTextDocument, h: ptr cQTextDocument): QTextDocument =
  T(h: h)
proc create*(T: type QTextDocument, ): QTextDocument =

  QTextDocument.init(fcQTextDocument_new())
proc create*(T: type QTextDocument, text: string): QTextDocument =

  QTextDocument.init(fcQTextDocument_new2(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QTextDocument, parent: gen_qobject.QObject): QTextDocument =

  QTextDocument.init(fcQTextDocument_new3(parent.h))
proc create*(T: type QTextDocument, text: string, parent: gen_qobject.QObject): QTextDocument =

  QTextDocument.init(fcQTextDocument_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))
proc metaObject*(self: QTextDocument, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTextDocument_metaObject(self.h))

proc metacast*(self: QTextDocument, param1: cstring): pointer =

  fcQTextDocument_metacast(self.h, param1)

proc metacall*(self: QTextDocument, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTextDocument_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTextDocument, s: cstring): string =

  let v_ms = fcQTextDocument_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc clone*(self: QTextDocument, ): QTextDocument =

  QTextDocument(h: fcQTextDocument_clone(self.h))

proc isEmpty*(self: QTextDocument, ): bool =

  fcQTextDocument_isEmpty(self.h)

proc clear*(self: QTextDocument, ): void =

  fcQTextDocument_clear(self.h)

proc setUndoRedoEnabled*(self: QTextDocument, enable: bool): void =

  fcQTextDocument_setUndoRedoEnabled(self.h, enable)

proc isUndoRedoEnabled*(self: QTextDocument, ): bool =

  fcQTextDocument_isUndoRedoEnabled(self.h)

proc isUndoAvailable*(self: QTextDocument, ): bool =

  fcQTextDocument_isUndoAvailable(self.h)

proc isRedoAvailable*(self: QTextDocument, ): bool =

  fcQTextDocument_isRedoAvailable(self.h)

proc availableUndoSteps*(self: QTextDocument, ): cint =

  fcQTextDocument_availableUndoSteps(self.h)

proc availableRedoSteps*(self: QTextDocument, ): cint =

  fcQTextDocument_availableRedoSteps(self.h)

proc revision*(self: QTextDocument, ): cint =

  fcQTextDocument_revision(self.h)

proc setDocumentLayout*(self: QTextDocument, layout: gen_qabstracttextdocumentlayout.QAbstractTextDocumentLayout): void =

  fcQTextDocument_setDocumentLayout(self.h, layout.h)

proc documentLayout*(self: QTextDocument, ): gen_qabstracttextdocumentlayout.QAbstractTextDocumentLayout =

  gen_qabstracttextdocumentlayout.QAbstractTextDocumentLayout(h: fcQTextDocument_documentLayout(self.h))

proc setMetaInformation*(self: QTextDocument, info: QTextDocumentMetaInformation, param2: string): void =

  fcQTextDocument_setMetaInformation(self.h, cint(info), struct_miqt_string(data: param2, len: csize_t(len(param2))))

proc metaInformation*(self: QTextDocument, info: QTextDocumentMetaInformation): string =

  let v_ms = fcQTextDocument_metaInformation(self.h, cint(info))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toHtml*(self: QTextDocument, ): string =

  let v_ms = fcQTextDocument_toHtml(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setHtml*(self: QTextDocument, html: string): void =

  fcQTextDocument_setHtml(self.h, struct_miqt_string(data: html, len: csize_t(len(html))))

proc toMarkdown*(self: QTextDocument, ): string =

  let v_ms = fcQTextDocument_toMarkdown(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setMarkdown*(self: QTextDocument, markdown: string): void =

  fcQTextDocument_setMarkdown(self.h, struct_miqt_string(data: markdown, len: csize_t(len(markdown))))

proc toRawText*(self: QTextDocument, ): string =

  let v_ms = fcQTextDocument_toRawText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toPlainText*(self: QTextDocument, ): string =

  let v_ms = fcQTextDocument_toPlainText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setPlainText*(self: QTextDocument, text: string): void =

  fcQTextDocument_setPlainText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc characterAt*(self: QTextDocument, pos: cint): gen_qchar.QChar =

  gen_qchar.QChar(h: fcQTextDocument_characterAt(self.h, pos))

proc find*(self: QTextDocument, subString: string): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQTextDocument_find(self.h, struct_miqt_string(data: subString, len: csize_t(len(subString)))))

proc find2*(self: QTextDocument, subString: string, cursor: gen_qtextcursor.QTextCursor): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQTextDocument_find2(self.h, struct_miqt_string(data: subString, len: csize_t(len(subString))), cursor.h))
